feat(T271): complete grouped autocomplete